--- a/6/99_homework/cover.html
+++ b/6/99_homework/cover.html
@@ -54,7 +54,7 @@
 			<div id="nav">
 				<select id="files">
 				
-				<option value="file0">99_homework/main.go (91.7%)</option>
+				<option value="file0">99_homework/main.go (97.2%)</option>
 				
 				</select>
 			</div>
@@ -144,21 +144,19 @@ func doSearch(searcherURL string, limit int, offset int, query string, orderFiel
         }</span>
         <span class="cov8" title="1">resp, err := client.Do(req)
         if err != nil </span><span class="cov8" title="1">{
-                // Была бы ошибка, если SearchServer занят другими запросами ???
-                if err, ok := err.(net.Error); ok &amp;&amp; err.Timeout() </span><span class="cov0" title="0">{
+                if err, ok := err.(net.Error); ok &amp;&amp; err.Timeout() </span><span class="cov8" title="1">{
                         return nil, fmt.Errorf("timeout for %s", searcherParams.Encode())
                 }</span>
                 <span class="cov8" title="1">return nil, err</span>
         }
         <span class="cov8" title="1">defer resp.Body.Close()
-        body, err := ioutil.ReadAll(resp.Body)
+        body, _ := ioutil.ReadAll(resp.Body)
 
         result := SearchResponse{}
 
         data := []User{}
         err = json.Unmarshal(body, &amp;data)
-        // Была бы ошибка, если неправильно написан SearchServer
-        if err != nil </span><span class="cov0" title="0">{
+        if err != nil </span><span class="cov8" title="1">{
                 return nil, err
         }</span>
 
